# brewblox-tilt

./: .env  Dockerfile  README.md  azure-pipelines.yml  docker-compose.yml  entrypoint.sh  install_tilt.py  parse_appenv.py  personalFile  pyproject.toml  tasks.py  tox.ini
.github/workflows/: build.yml
brewblox_tilt/: __main__.py  app_factory.py  blescan.py  broadcaster.py  broadcaster_sim.py  config.py  const.py  models.py  names.py  parser.py  scanner.py  simulation.py  stored.py  utils.py
brewblox_tilt/stored/: __init__.py  calibration.py  devices.py
docker/: Dockerfile  before_build.sh
share/: .gitignore
test/: conftest.py  docker-compose.yml  test_blescan.py  test_broadcaster.py  test_calibration.py  test_config.py  test_device.py  test_devices.py  test_dummy.py  test_names.py  test_parser.py  test_stored.py
