[tool.poetry]
name = "brewblox-tilt"
version = "2.1.0"
description = "Tilt hydrometer service for Brewblox"
authors = [
    "BrewPi <development@brewpi.com>",
    "James Sandford <brewblox-tilt@j616s.co.uk>",
]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
brewblox-service = "^3.3.2"
Pint = "^0.22"
"ruamel.yaml" = "^0.17.17"
numpy = "1.25.2"
bleak = "^0.21.1"
construct = "^2.10.68"
ninja = "1.10.2.3"


[tool.poetry.group.dev.dependencies]
pytest-cov = "*"
pytest-mock = "*"
pytest-aiohttp = "*"
flake8 = "*"
autopep8 = "*"
flake8-quotes = "*"
click = "*"
PyYAML = "*"
pytest = "*"
aresponses = "*"
invoke = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
