[tool.poetry]
name = "brewblox-tilt"
version = "2.1.0"
description = "Tilt hydrometer service for Brewblox"
authors = [
    "BrewPi <development@brewpi.com>",
    "James Sandford <brewblox-tilt@j616s.co.uk>",
]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
Pint = "^0.22"
"ruamel.yaml" = "^0.17.17"
numpy = "1.25.2"
bleak = "^0.21.1"
construct = "^2.10.68"
pydantic-settings = "^2.1.0"
fastapi = "^0.104.1"
fastapi-mqtt = "^2.0.0"
uvicorn = { extras = ["standard"], version = "^0.24.0.post1" }

[tool.poetry.group.dev.dependencies]
pytest-cov = "*"
pytest-mock = "*"
flake8 = "*"
autopep8 = "*"
flake8-quotes = "*"
PyYAML = "*"
pytest = "*"
invoke = "*"
flake8-pyproject = "*"
pytest-asyncio = "*"
pytest-docker = "*"
httpx = "^0.25.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = """
    --ignore=app/
    --ignore=share/
    --cov=brewblox_tilt
    --cov-branch
    --cov-report=term-missing:skip-covered
    --no-cov-on-fail
    --durations=3
    """

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "except asyncio.CancelledError:",
]

[tool.flake8]
max-line-length = 120
exclude = ".venv"

[tool.autopep8]
max-line-length = 120
